drivers/gpu/drm/i915/i915_drv.h
@@ -516,7 +516,7 @@ struct i915_psr {
 	u16 su_x_granularity;
 	bool dc3co_enabled;
 	u32 dc3co_exit_delay;
-	struct delayed_work dc3co_work;
+	struct delayed_work idle_work;
 	bool force_mode_changed;
 };
 
